@@ -77,6 +77,7 @@ include_once('include/page_header.php');
 		'useipmi'=>		array(T_ZBX_STR, O_OPT,	NULL,	NULL,			NULL),
 		'ipmi_ip'=>		array(T_ZBX_STR, O_OPT,	NULL,	NULL,			'isset({useipmi})&&!isset({massupdate})'),
 		'ipmi_port'=>		array(T_ZBX_INT, O_OPT,	NULL,	BETWEEN(0,65535),	'isset({useipmi})&&!isset({massupdate})'),
+		'ipmi_authtype'=>	array(T_ZBX_INT, O_OPT,	NULL,	BETWEEN(-1,6),		'isset({useipmi})&&!isset({massupdate})'),
 		'ipmi_privilege'=>	array(T_ZBX_INT, O_OPT,	NULL,	BETWEEN(1,5),		'isset({useipmi})&&!isset({massupdate})'),
 		'ipmi_username'=>	array(T_ZBX_STR, O_OPT,	NULL,	NULL,			'isset({useipmi})&&!isset({massupdate})'),
 		'ipmi_password'=>	array(T_ZBX_STR, O_OPT,	NULL,	NULL,			'isset({useipmi})&&!isset({massupdate})'),
@@ -217,7 +218,7 @@ include_once('include/page_header.php');
 				$result &= update_host($hostid,
 								$host['host'],$host['port'],$host['status'],$host['useip'],$host['dns'],
 								$host['ip'],$host['proxy_hostid'],$templates_tmp,$host['useipmi'],$host['ipmi_ip'],
-								$host['ipmi_port'],$host['ipmi_privilege'],$host['ipmi_username'],
+								$host['ipmi_port'],$host['ipmi_authtype'],$host['ipmi_privilege'],$host['ipmi_username'],
 								$host['ipmi_password'],null,$host_groups);
 			}
 //----------
@@ -317,7 +318,7 @@ include_once('include/page_header.php');
 			$result = update_host($hostid,
 				$db_host['host'],$db_host['port'],$db_host['status'],$db_host['useip'],$db_host['dns'],
 				$db_host['ip'],$db_host['proxy_hostid'],$db_host['templates'],$db_host['useipmi'],$db_host['ipmi_ip'],
-				$db_host['ipmi_port'],$db_host['ipmi_privilege'],$db_host['ipmi_username'],
+				$db_host['ipmi_port'],$db_host['ipmi_authtype'],$db_host['ipmi_privilege'],$db_host['ipmi_username'],
 				$db_host['ipmi_password'],$_REQUEST['newgroup'],$db_host['groups']);
 
 		
@@ -436,7 +437,7 @@ include_once('include/page_header.php');
 			$result = update_host($_REQUEST['hostid'],
 				$_REQUEST['host'],$_REQUEST['port'],$_REQUEST['status'],$useip,$_REQUEST['dns'],
 				$_REQUEST['ip'],$_REQUEST['proxy_hostid'],$templates,$useipmi,$_REQUEST['ipmi_ip'],
-				$_REQUEST['ipmi_port'],$_REQUEST['ipmi_privilege'],$_REQUEST['ipmi_username'],
+				$_REQUEST['ipmi_port'],$_REQUEST['ipmi_authtype'],$_REQUEST['ipmi_privilege'],$_REQUEST['ipmi_username'],
 				$_REQUEST['ipmi_password'],$_REQUEST['newgroup'],$groups);
 				
 			$msg_ok 	= S_HOST_UPDATED;
@@ -449,7 +450,7 @@ include_once('include/page_header.php');
 			$hostid = $result = add_host(
 				$_REQUEST['host'],$_REQUEST['port'],$_REQUEST['status'],$useip,$_REQUEST['dns'],
 				$_REQUEST['ip'],$_REQUEST['proxy_hostid'],$templates,$useipmi,$_REQUEST['ipmi_ip'],
-				$_REQUEST['ipmi_port'],$_REQUEST['ipmi_privilege'],$_REQUEST['ipmi_username'],
+				$_REQUEST['ipmi_port'],$_REQUEST['ipmi_authtype'],$_REQUEST['ipmi_privilege'],$_REQUEST['ipmi_username'],
 				$_REQUEST['ipmi_password'],$_REQUEST['newgroup'],$groups);
 			
 			$msg_ok 	= S_HOST_ADDED;
