@@ -170,7 +170,7 @@ require_once('include/httptest.inc.php');
 	 *
 	 *     NOTE: templates = array(id => name, id2 => name2, ...)
 	 */
-	function db_save_host($host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_privilege,$ipmi_username,$ipmi_password,$hostid=null)
+	function db_save_host($host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_authtype,$ipmi_privilege,$ipmi_username,$ipmi_password,$hostid=null)
 	{
 		if(!eregi('^'.ZBX_EREG_HOST_FORMAT.'$', $host)){
 			error("Incorrect characters used for Hostname");
@@ -206,9 +206,10 @@ require_once('include/httptest.inc.php');
 		if(is_null($hostid)){
 			$hostid = get_dbid('hosts','hostid');
 			$result = DBexecute('INSERT INTO hosts '.
-				' (hostid,proxy_hostid,host,port,status,useip,dns,ip,disable_until,available,useipmi,ipmi_port,ipmi_privilege,ipmi_username,ipmi_password) '.
+				' (hostid,proxy_hostid,host,port,status,useip,dns,ip,disable_until,available,useipmi,ipmi_port,ipmi_authtype,ipmi_privilege,ipmi_username,ipmi_password) '.
 				' VALUES ('.$hostid.','.$proxy_hostid.','.zbx_dbstr($host).','.$port.','.$status.','.$useip.','.zbx_dbstr($dns).','.zbx_dbstr($ip).',0,'
-					.HOST_AVAILABLE_UNKNOWN.','.($useipmi == 'yes' ? 1 : 0).','.$ipmi_port.','.$ipmi_privilege.','.zbx_dbstr($ipmi_username).','.zbx_dbstr($ipmi_password).')');
+					.HOST_AVAILABLE_UNKNOWN.','.($useipmi == 'yes' ? 1 : 0).','.$ipmi_port.','.$ipmi_authtype.','.$ipmi_privilege.','.zbx_dbstr($ipmi_username).','
+					.zbx_dbstr($ipmi_password).')');
 		}
 		else{
 			if(check_circle_host_link($hostid, $templates)){
@@ -224,7 +225,8 @@ require_once('include/httptest.inc.php');
 							',ip='.zbx_dbstr($ip).
 							',useipmi='.($useipmi == 'yes' ? 1 : 0).
 							',ipmi_port='.$ipmi_port.
-							',ipmi_privilege='.zbx_dbstr($ipmi_privilege).
+							',ipmi_authtype='.$ipmi_authtype.
+							',ipmi_privilege='.$ipmi_privilege.
 							',ipmi_username='.zbx_dbstr($ipmi_username).
 							',ipmi_password='.zbx_dbstr($ipmi_password).
 				' WHERE hostid='.$hostid);
@@ -256,9 +258,9 @@ require_once('include/httptest.inc.php');
  *
  *     NOTE: templates = array(id => name, id2 => name2, ...)
  */
-	function add_host($host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_privilege,$ipmi_username,$ipmi_password,$newgroup,$groups)
+	function add_host($host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_authtype,$ipmi_privilege,$ipmi_username,$ipmi_password,$newgroup,$groups)
 	{
-		$hostid = db_save_host($host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_privilege,$ipmi_username,$ipmi_password);
+		$hostid = db_save_host($host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_authtype,$ipmi_privilege,$ipmi_username,$ipmi_password);
 		if(!$hostid)
 			return $hostid;
 		else
@@ -286,7 +288,7 @@ require_once('include/httptest.inc.php');
 	 *
 	 *     NOTE: templates = array(id => name, id2 => name2, ...)
 	 */	
-	function update_host($hostid,$host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_privilege,$ipmi_username,$ipmi_password,$newgroup,$groups)
+	function update_host($hostid,$host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_authtype,$ipmi_privilege,$ipmi_username,$ipmi_password,$newgroup,$groups)
 	{
 	
 		$old_templates = get_templates_by_hostid($hostid);
@@ -300,7 +302,7 @@ require_once('include/httptest.inc.php');
 
 		$new_templates = array_diff($templates, $old_templates);
 
-		$result = (bool) db_save_host($host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$new_templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_privilege,$ipmi_username,$ipmi_password,$hostid);
+		$result = (bool) db_save_host($host,$port,$status,$useip,$dns,$ip,$proxy_hostid,$new_templates,$useipmi,$ipmi_ip,$ipmi_port,$ipmi_authtype,$ipmi_privilege,$ipmi_username,$ipmi_password,$hostid);
 		if(!$result)
 			return $result;
 
