@@ -6,6 +6,7 @@ Changes for 1.7.0
 
 Changes for 1.6.1
 
+ - [ZBX-576] added IPMI authentication algorithms (Sasha)
  - [ZBX-573] made SQL optimization for PGSQL (Artem)
  - [ZBX-570] fixed possible server crash if flexible interval delay is 0 sec. (Sasha)
  - [ZBX-565] fixed filtering of conf->triggers (Artem)
